<resources>
    <string name="app_name">Split Pay</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up_now"> Sign up now!</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="sign_in_now">Sign in now!</string>
    <string name="re_enter_password">Re enter password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="select_your_photo">Select your photo</string>
    <string name="dash_board">DashBoard</string>
    <string name="the_split">The Split</string>
    <string name="lets_split_pay">Lets Split Pay!</string>
    <string name="add_people">Add People</string>
    <string name="save">Save</string>
    <string name="the_split_title">The split title</string>
    <string name="paid_by">Paid by :</string>
    <string name="_1000">1000/-</string>
    <string name="reset">Reset</string>
    <string name="transactions">Transactions</string>
    <string name="_100">100</string>
    <string name="my_name">my name</string>
</resources>