<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup_activity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DashBoardTV"
        android:text="@string/sign_up"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#0091EA"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userNameBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_account_box_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"

        android:textColor="@color/black"


        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DashBoardTV" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp"

        android:textColor="@color/black"


        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameBox" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#0091EA"

        app:layout_constraintTop_toBottomOf="@+id/emailBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordBox"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="#30ffffff"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="10dp"
            android:textSize="22sp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reEnterPasswordBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#0091EA"

        app:layout_constraintTop_toBottomOf="@+id/passwordBoxLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reEnterPasswordBox"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="#30ffffff"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="10dp"
            android:textSize="22sp"/>


    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#0091EA"
        android:text="@string/register"
        android:onClick="registerFunc"
        android:textColor="@color/white"

        android:textSize="22sp"


        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reEnterPasswordBoxLayout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#0091EA"
            android:onClick="signInFunc"
            android:text="@string/sign_in_now"
            android:textColor="@color/white"


            android:textSize="22sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>