<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".split">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/SplitText"
            android:background="#50FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_split_pay"
            android:fontFamily="sans-serif-black"
            android:textColor="#03629C"
            android:textSize="33sp"
            android:layout_margin="10dp"
            android:drawableTint="@color/black"
            android:padding="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableTop="@drawable/baseline_balance_24"
            android:drawablePadding="10dp"
            android:drawableBottom="@drawable/baseline_balance_24"
            android:drawableStart="@drawable/baseline_balance_24"
            android:drawableEnd="@drawable/baseline_balance_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/split_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="The split title"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="25sp"

            />

        <TextView
            android:id="@+id/split_name_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Paid by: Person A"

            android:textColor="#005C95"
            android:textSize="18sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/split_name_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/paid_by"
                android:textColor="@color/black"
                android:textSize="14sp"

                />
            <TextView
                android:id="@+id/SplitMoneyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/_1000"
                android:textColor="#005C95"

                android:textSize="22sp"

                app:drawableStartCompat="@drawable/baseline_currency_rupee_24" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectedPeopleRV"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="#005C95"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reset"
                android:onClick="reset_recycler_view"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="#005C95"
                android:drawableStart="@drawable/baseline_add_24"
                android:drawablePadding="10dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/add_people"
                android:textSize="18sp"
                android:onClick="add_people"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="#005C95"
                android:gravity="center"
                android:padding="10dp"
                android:onClick="save_post_split"
                android:text="@string/save"
                app:cornerRadius="10dp" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>